feat: implement event-driven index folder creation on AL file save

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "Other"
   ],
   "activationEvents": [
-    "onLanguage:al"
+    "onLanguage:al",
+    "onLanguage:plaintext"
   ],
   "main": "./src/extension.js",
   "contributes": {
