--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bc-al-upgradeassistant",
   "displayName": "BC/AL Upgrade Assistant",
   "description": "Assists you in transforming old C/AL and more",
-  "version": "0.0.39",
+  "version": "0.0.54",
   "icon": "media/icon.png",
   "publisher": "ngSoftware",
   "engines": {
@@ -392,9 +392,7 @@
   },
   "scripts": {
     "lint": "eslint .",
-    "pre-publish": "npm run lint && node ./scripts/prepublish.js",
-    "after-publish": "node ./scripts/afterpublish.js",
-    "publish": "npm run pre-publish && webpack --mode=production && vsce publish --allow-missing-repository && npm run after-publish"
+    "webpack": "webpack --mode=production"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
