--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bc-al-upgradeassistant",
   "displayName": "BC/AL Upgrade Assistant",
   "description": "Assists you in transforming old C/AL and more",
-  "version": "0.0.60",
+  "version": "0.0.61",
   "icon": "media/icon.png",
   "publisher": "ngSoftware",
   "engines": {
@@ -69,6 +69,12 @@
         "title": "Toggle Not Implemented",
         "category": "BC/AL Upgrade Assistant",
         "icon": "$(circle-slash)"
+      },
+      {
+        "command": "bc-al-upgradeassistant.setDocumentationReferenceDescription",
+        "title": "Add/Edit Note",
+        "category": "BC/AL Upgrade Assistant",
+        "icon": "$(edit)"
       }
     ],
     "menus": {
@@ -142,6 +148,26 @@
           "command": "bc-al-upgradeassistant.toggleDocumentationReferenceNotImplemented",
           "when": "view == bc-al-file-info && viewItem == documentationRefNotImplemented",
           "group": "1_modification"
+        },
+        {
+          "command": "bc-al-upgradeassistant.setDocumentationReferenceDescription",
+          "when": "view == bc-al-references && (viewItem == documentationRef || viewItem == documentationRefDone || viewItem == documentationRefNotImplemented)",
+          "group": "1_modification"
+        },
+        {
+          "command": "bc-al-upgradeassistant.setDocumentationReferenceDescription",
+          "when": "view == bc-al-file-info && (viewItem == documentationRef || viewItem == documentationRefDone || viewItem == documentationRefNotImplemented)",
+          "group": "1_modification"
+        },
+        {
+          "command": "bc-al-upgradeassistant.setDocumentationReferenceDescription",
+          "when": "view == bc-al-references && (viewItem == documentationRef || viewItem == documentationRefDone || viewItem == documentationRefNotImplemented)",
+          "group": "inline"
+        },
+        {
+          "command": "bc-al-upgradeassistant.setDocumentationReferenceDescription",
+          "when": "view == bc-al-file-info && (viewItem == documentationRef || viewItem == documentationRefDone || viewItem == documentationRefNotImplemented)",
+          "group": "inline"
         }
       ]
     },
