--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bc-al-upgradeassistant",
   "displayName": "BC/AL Upgrade Assistant",
   "description": "Assists you in transforming old C/AL and more",
-  "version": "0.0.61",
+  "version": "0.0.62",
   "icon": "media/icon.png",
   "publisher": "ngSoftware",
   "engines": {
@@ -78,7 +78,23 @@
       }
     ],
     "menus": {
-      "editor/context": [],
+      "editor/context": [
+        {
+          "command": "bc-al-upgradeassistant.toggleDocumentationReferenceDone",
+          "when": "resourceExtname == .txt && editorHasDocumentationRef",
+          "group": "bc-al-references@1"
+        },
+        {
+          "command": "bc-al-upgradeassistant.toggleDocumentationReferenceNotImplemented",
+          "when": "resourceExtname == .txt && editorHasDocumentationRef",
+          "group": "bc-al-references@2"
+        },
+        {
+          "command": "bc-al-upgradeassistant.setDocumentationReferenceDescription",
+          "when": "resourceExtname == .txt && editorHasDocumentationRef",
+          "group": "bc-al-references@3"
+        }
+      ],
       "view/title": [
         {
           "command": "bc-al-upgradeassistant.refreshReferenceView",
