--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bc-al-upgradeassistant",
   "displayName": "BC/AL Upgrade Assistant",
   "description": "Assists you in transforming old C/AL and more",
-  "version": "0.0.65",
+  "version": "0.0.66",
   "icon": "media/icon.png",
   "publisher": "ngSoftware",
   "engines": {
@@ -456,6 +456,12 @@
               "description": "Base folder for upgraded AL objects when no specific type folder is defined"
             }
           }
+        },
+        "bc-al-upgradeassistant.userId": {
+          "type": "string",
+          "default": "",
+          "description": "User identifier for toggling documentation reference status.",
+          "scope": "machine"
         }
       }
     },
