--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bc-al-upgradeassistant",
   "displayName": "BC/AL Upgrade Assistant",
   "description": "Assists you in transforming old C/AL and more",
-  "version": "0.0.68",
+  "version": "0.0.69",
   "icon": "media/icon.png",
   "publisher": "ngSoftware",
   "engines": {
@@ -26,6 +26,11 @@
       {
         "command": "bc-al-upgradeassistant.splitCalObjects",
         "title": "Split C/AL Objects",
+        "category": "BC/AL Upgrade Assistant"
+      },
+      {
+        "command": "bc-al-upgradeassistant.splitCalObjectsByPath",
+        "title": "Split C/AL Objects (Select File)",
         "category": "BC/AL Upgrade Assistant"
       },
       {
