--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bc-al-upgradeassistant",
   "displayName": "BC/AL Upgrade Assistant",
   "description": "Assists you in transforming old C/AL and more",
-  "version": "0.0.78",
+  "version": "0.0.79",
   "icon": "media/icon.png",
   "publisher": "ngSoftware",
   "engines": {
@@ -48,7 +48,7 @@
         "command": "bc-al-upgradeassistant.openMigrationFile",
         "title": "Open Migration File",
         "category": "BC/AL Upgrade Assistant",
-        "icon": "$(file)"
+        "icon": "$(file-code)"
       },
       {
         "command": "bc-al-upgradeassistant.refreshReferenceView",
