--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bc-al-upgradeassistant",
   "displayName": "BC/AL Upgrade Assistant",
   "description": "Assists you in transforming old C/AL and more",
-  "version": "0.0.83",
+  "version": "0.0.85",
   "icon": "media/icon.png",
   "publisher": "ngSoftware",
   "engines": {
@@ -667,6 +667,16 @@
           "default": "",
           "description": "User identifier for toggling documentation reference status.",
           "scope": "machine"
+        },
+        "bc-al-upgradeassistant.enableSrcExtraction": {
+          "type": "boolean",
+          "default": false,
+          "description": "Enable extraction of source files from .app files"
+        },
+        "bc-al-upgradeassistant.srcExtractionPath": {
+          "type": "string",
+          "default": "",
+          "description": "Path where extracted source files will be saved"
         }
       }
     },
